--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootswatch": "^5.1.1",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^4.1.17",
     "next": "11.1.2",
     "nprogress": "^0.2.0",
