--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "11.1.2",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-intersection-observer": "^8.32.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
