--- a/package.json
+++ b/package.json
@@ -9,17 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bootswatch": "^5.1.1",
-    "emailjs-com": "^3.2.0",
-    "framer-motion": "^4.1.17",
-    "next": "11.1.2",
-    "nprogress": "^0.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-intersection-observer": "^8.32.1"
+    "next": "12.2.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "@types/node": "18.0.3",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
+    "eslint": "8.19.0",
+    "eslint-config-next": "12.2.2",
+    "typescript": "4.7.4"
   }
 }
