--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "next": "12.2.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "10.0.0",
+    "react": "16.13.0",
+    "react-dom": "16.13.0",
+    "react-typical": "^0.1.3"
   },
   "devDependencies": {
     "@types/node": "18.0.3",
