--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,28 @@
 {
-  "env": {
-    "browser": true,
-    "commonjs": true,
-    "node": true,
-    "es2021": true
-  },
-  "extends": [ "next/core-web-vitals"],
-  "parserOptions": {
-    "ecmaVersion": "latest"
-  },
-  "rules": {
-    "no-console": "warn",
-    "space-before-function-paren": ["error", "never"]
-  }
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
+    "extends": [
+        "plugin:react/recommended",
+        "standard"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "plugins": [
+        "react",
+        "@typescript-eslint"
+    ],
+    "rules": {
+        // suppress errors for missing 'import React' in files
+   "react/react-in-jsx-scope": "off",
+   // allow jsx syntax in js files (for next.js project)
+  "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx",".tsx"] }]
+    }
 }
