--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint":  "eslint './**/*.{js,ts,jsx,tsx}'"
+    "lint": "eslint './**/*.{js,ts,jsx,tsx}'"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -16,6 +16,7 @@
     "next": "10.0.0",
     "react": "16.13.0",
     "react-dom": "16.13.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-typical": "^0.1.3"
   },
   "devDependencies": {
