--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "next": "10.0.0",
+    "nodemailer": "^6.7.7",
     "react": "16.13.0",
     "react-dom": "16.13.0",
     "react-elastic-carousel": "^0.11.5",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "18.0.3",
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
