--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "next": "10.0.0",
+    "next": "^12.2.2",
     "nodemailer": "^6.7.7",
-    "react": "16.13.0",
-    "react-dom": "16.13.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-elastic-carousel": "^0.11.5",
     "react-typical": "^0.1.3"
   },
