--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-elastic-carousel": "^0.11.5",
+    "react-intersection-observer": "^9.3.5",
     "react-typical": "^0.1.3"
   },
   "devDependencies": {
