--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.2.0",
     "react-elastic-carousel": "^0.11.5",
     "react-intersection-observer": "^9.3.5",
-    "react-typical": "^0.1.3"
+    "react-typical": "^0.1.3",
+    "react-world-flags": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "18.0.3",
