--- a/projects.json
+++ b/projects.json
@@ -27,19 +27,22 @@
     "description":
       "As a form of integrating this new API query language to my workflow I built a simple UI that displays information thanks to RickAndMortyGraphQL API. This proyect was based on VueJSMex crash course for Vue3,you can the see full details of this project clicking the link",
     "image": "/assets/projects/project_4.png",
-    "bgColor":"#343434"
+    "bgColor":"#343434",
+    "knowMore":""
   },
   {
     "name": "NodeJS + MongoDB + Docker",
     "description":
       "Since late 2020 containerization technologies has caught my attention thats why I´ve been experimenting with this technologie using Docker, in this case,builind a NotesApp containerizing an instance of NodeJS for the Backenda and MongoDB as the main database in a different container using DockerCompose you can the see full details of this project clicking the link",
     "image": "/assets/projects/project_5.png",
-    "bgColor":"#83DFB0"
+    "bgColor":"#83DFB0",
+    "knowMore":""
   },
   {
     "name": "ASP + MySQL E Commerce",
     "description":
       "An E-Commerce made with C# and ASP.NET framework in the backend and using a  MySQL database,this was the Final Proyect for one of my develpment college courses,you can the see full details of this project clicking the link",
-    "image": "/assets/projects/project_6.jpg"
+    "image": "/assets/projects/project_6.jpg",
+    "knowMore":""
   }]
 }
