--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fullhuman/postcss-purgecss": "^5.0.0",
+    "autoprefixer": "^10.4.14",
     "next": "^12.2.2",
     "nodemailer": "^6.7.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^8.4.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-intersection-observer": "^9.3.5",
     "react-typical": "^0.1.3",
