--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "autoprefixer": "^10.4.14",
-    "next": "^12.2.2",
+    "eslint-config-next": "^15.3.2",
+    "next": "^15.3.2",
     "nodemailer": "^6.7.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-elastic-carousel": "^0.11.5",
     "react-intersection-observer": "^9.3.5",
-    "react-typical": "^0.1.3",
+    "react-type-animation": "^3.2.0",
     "react-world-flags": "^1.5.0"
   },
   "devDependencies": {
@@ -31,12 +32,10 @@
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "eslint": "^8.19.0",
-    "eslint-config-next": "12.2.2",
-    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.1",
-    "typescript": "4.7.4"
+    "typescript": "5.0.4"
   }
 }
